# -Trace-virtual-cpu

./: CMakeLists.txt  CMakeLists.txt.gui  README.md  imgui.ini  run_cli.sh  run_gui.sh
gui/: app.cpp  app.cpp.old
include/: cpu.hpp  trace.hpp
programs/: program.hex  user-guide.txt
src/: cpu.cpp  demo_program.cpp  main.cpp  main.cpp.old
